# nav2_minimal_bringup

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
config/: nav2_params.yaml  slam_params.yaml
launch/: full_navigation.launch.py  navigation.launch.py  save_map.launch.py  slam.launch.py
maps/: generated_map.pgm  generated_map.yaml  house_map.pgm  house_map.yaml  map.pgm  map.yaml  my_map.pgm  my_map.yaml  sim_map.pgm  sim_map.yaml
rviz/: mapping.rviz
scripts/: car_controller.py  initial_pose_nav_startup.py  keyboard_cmd_vel_test.py
