<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_nav_bringup</name>
  <version>0.0.1</version>
  <description>Minimal Nav2 bringup package for an apt-installed ROS 2 Humble navigation stack.</description>
  <maintainer email="eden@example.com">eden</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
